# agent-comparison-tool

./: .gitignore  README.md  justfile  pyproject.toml
docker/: Dockerfile  analyze-entrypoint.sh  docker-compose.yml  entrypoint.sh
experiments/: basic-greenfield-plan-creation.toml  example.toml  sentry-star-unstar-plan-creation.toml  sonnet-vs-gpt5.toml  sonnet-vs-haiku.toml
results/basic-greenfield-plan-creation-2026-02-12-151226/: analysis.md  config.toml  stats.json
results/basic-greenfield-plan-creation-2026-02-12-151226/gpt-5-1/: metrics.json
results/basic-greenfield-plan-creation-2026-02-12-151226/gpt-5-2/: metrics.json
results/basic-greenfield-plan-creation-2026-02-12-151226/gpt-5-3/: metrics.json
results/basic-greenfield-plan-creation-2026-02-12-151226/opus-4.6-1/: metrics.json
results/basic-greenfield-plan-creation-2026-02-12-151226/opus-4.6-2/: metrics.json
results/basic-greenfield-plan-creation-2026-02-12-151226/opus-4.6-3/: metrics.json
results/basic-greenfield-plan-creation-2026-02-12-151226/sonnet-4.5-1/: metrics.json
results/basic-greenfield-plan-creation-2026-02-12-151226/sonnet-4.5-2/: metrics.json
results/sentry-star-unstar-plan-creation-2026-02-19-142857/: analysis.md  config.toml  stats.json
sample-repo/: CONSTITUTION.md  PROMPT.md  SPEC.md
src/act/: __init__.py  analysis.py  cli.py  config.py  container.py  display.py  metrics.py  runner.py
src/agent_benchmark/: __init__.py  analysis.py  cli.py  config.py  container.py  display.py  metrics.py  runner.py
tests/: test_container.py  test_metrics.py
(+143 files in other folders)
